変更しました。

--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:lHsTcpn8AoilyLazK4+lbL6Caa96QsVDnx+uG9EuvOA=
+APP_KEY=base64:wvUbbhCbqMDbec7+XX4LypD1TIfEzQFihqdy6J215bA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -30,12 +30,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=03fe3782c9c17d
+MAIL_PASSWORD=007280a176406d
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=dicaiyue856@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
