--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "^12.12"
+        "laravel/framework": "^12.12",
+        "stripe/stripe-php": "^17.3"
     }
 }
