--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,23 @@
 version: '3.8'
+
 services:
     nginx:
         image: nginx:1.21.1
         ports:
-            - "8888:80"
+            - "80:80"
         volumes:
             - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
             - ./src:/var/www/
         depends_on:
             - php
+
     php:
         build: ./docker/php
         volumes:
             - ./src:/var/www/
+
     mysql:
         image: mysql:8.0.26
-        platform: linux/amd64
         environment:
             MYSQL_ROOT_PASSWORD: root
             MYSQL_DATABASE: laravel_db
@@ -24,11 +26,11 @@ services:
         command:
             mysqld --default-authentication-plugin=mysql_native_password
         volumes:
-            - db-data:/var/lib/mysql
+            - ./docker/mysql/data:/var/lib/mysql
             - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
-        platform: linux/amd64
         environment:
             - PMA_ARBITRARY=1
             - PMA_HOST=mysql
@@ -38,5 +40,3 @@ services:
             - mysql
         ports:
             - 8080:80
-volumes:
-    db-data:
